--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartbinoptionsupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData:interface'
-    summary: '<span data-ttu-id="ccc65-101">一个用于更新 ChartBinOptions 对象上的数据的接口，可用于`chartBinOptions.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="ccc65-101">An interface for updating data on the ChartBinOptions object, for use in `chartBinOptions.set({ ... })`</span></span><!-- --><span data-ttu-id="ccc65-102">.</span><span class="sxs-lookup"><span data-stu-id="ccc65-102"></span></span>'
+    summary: '一个用于更新 ChartBinOptions 对象上的数据的接口，可用于`chartBinOptions.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartBinOptionsUpdateData
     fullName: Excel.Interfaces.ChartBinOptionsUpdateData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#allowOverflow:member'
     summary: |-
-      <span data-ttu-id="ccc65-103">指定是否在直方图或排列图中启用容器溢出。</span><span class="sxs-lookup"><span data-stu-id="ccc65-103">Specifies whether or not the bin overflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-104">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-104">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 "bin 溢出"。
 
-      <span data-ttu-id="ccc65-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowOverflow
     fullName: allowOverflow
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#allowUnderflow:member'
     summary: |-
-      <span data-ttu-id="ccc65-106">指定是否在直方图或排列图中启用容器下溢。</span><span class="sxs-lookup"><span data-stu-id="ccc65-106">Specifies whether or not the bin underflow is enabled in a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-107">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-107">Read/Write.</span></span>
+      指定直方图图表或排列图表中是否启用了 bin 下溢。
 
-      <span data-ttu-id="ccc65-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: allowUnderflow
     fullName: allowUnderflow
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#count:member'
     summary: |-
-      <span data-ttu-id="ccc65-109">返回或设置直方图或排列图的容器数量。</span><span class="sxs-lookup"><span data-stu-id="ccc65-109">Returns or sets the bin count of a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-110">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-110">Read/Write.</span></span>
+      指定直方图图表或排列图表的分类数。
 
-      <span data-ttu-id="ccc65-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -63,9 +63,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#overflowValue:member'
     summary: |-
-      <span data-ttu-id="ccc65-112">返回或设置直方图或排列图的容器溢出值。</span><span class="sxs-lookup"><span data-stu-id="ccc65-112">Returns or sets the bin overflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-113">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-113">Read/Write.</span></span>
+      指定直方图图表或排列图表的 "bin 溢出" 值。
 
-      <span data-ttu-id="ccc65-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overflowValue
     fullName: overflowValue
     langs:
@@ -78,9 +78,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#type:member'
     summary: |-
-      <span data-ttu-id="ccc65-115">返回或设置直方图或排列图的容器类型。</span><span class="sxs-lookup"><span data-stu-id="ccc65-115">Returns or sets the bin's type for a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-116">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-116">Read/Write.</span></span>
+      指定用于直方图图表或排列图表的 bin 类型。
 
-      <span data-ttu-id="ccc65-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -93,9 +93,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#underflowValue:member'
     summary: |-
-      <span data-ttu-id="ccc65-118">返回或设置直方图或排列图的容器下溢值。</span><span class="sxs-lookup"><span data-stu-id="ccc65-118">Returns or sets the bin underflow value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-119">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-119">Read/Write.</span></span>
+      指定直方图图表或排列图表的 bin 下溢值。
 
-      <span data-ttu-id="ccc65-120">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-120">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underflowValue
     fullName: underflowValue
     langs:
@@ -108,9 +108,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartBinOptionsUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="ccc65-121">返回或设置直方图或排列图的容器宽度值。</span><span class="sxs-lookup"><span data-stu-id="ccc65-121">Returns or sets the bin width value of a histogram chart or pareto chart.</span></span> <span data-ttu-id="ccc65-122">读/写。</span><span class="sxs-lookup"><span data-stu-id="ccc65-122">Read/Write.</span></span>
+      指定直方图图表或排列图表的纸盒宽度值。
 
-      <span data-ttu-id="ccc65-123">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="ccc65-123">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
