--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.imagedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ImageData:interface'
-    summary: <span data-ttu-id="97136-101">描述通过调用返回的数据的接口`image.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="97136-101">An interface describing the data returned by calling `image.toJSON()`</span></span><!-- --><span data-ttu-id="97136-102">.</span><span class="sxs-lookup"><span data-stu-id="97136-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`image.toJSON()`<!-- -->.
     name: Excel.Interfaces.ImageData
     fullName: Excel.Interfaces.ImageData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ImageData#id:member'
   - uid: 'excel!Excel.Interfaces.ImageData#format:member'
     summary: |-
-      <span data-ttu-id="97136-103">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="97136-103">Returns the format of the image.</span></span> <span data-ttu-id="97136-104">只读。</span><span class="sxs-lookup"><span data-stu-id="97136-104">Read-only.</span></span>
+      返回图像的格式。
 
-      <span data-ttu-id="97136-105">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97136-105">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ImageData#format~0:complex'
   - uid: 'excel!Excel.Interfaces.ImageData#id:member'
     summary: |-
-      <span data-ttu-id="97136-106">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="97136-106">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="97136-107">只读。</span><span class="sxs-lookup"><span data-stu-id="97136-107">Read-only.</span></span>
+      指定 image 对象的形状标识符。
 
-      <span data-ttu-id="97136-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="97136-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
