--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pagebreakdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pagebreakdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PageBreakData:interface'
-    summary: <span data-ttu-id="62e3e-101">描述通过调用返回的数据的接口`pageBreak.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="62e3e-101">An interface describing the data returned by calling `pageBreak.toJSON()`</span></span><!-- --><span data-ttu-id="62e3e-102">.</span><span class="sxs-lookup"><span data-stu-id="62e3e-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`pageBreak.toJSON()`<!-- -->.
     name: Excel.Interfaces.PageBreakData
     fullName: Excel.Interfaces.PageBreakData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.PageBreakData#rowIndex:member'
   - uid: 'excel!Excel.Interfaces.PageBreakData#columnIndex:member'
     summary: |-
-      <span data-ttu-id="62e3e-103">表示分页符的列索引</span><span class="sxs-lookup"><span data-stu-id="62e3e-103">Represents the column index for the page break</span></span>
+      指定分页符的列索引
 
-      <span data-ttu-id="62e3e-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62e3e-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
     fullName: columnIndex
     langs:
@@ -28,9 +28,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.PageBreakData#rowIndex:member'
     summary: |-
-      <span data-ttu-id="62e3e-105">表示分页符的行索引</span><span class="sxs-lookup"><span data-stu-id="62e3e-105">Represents the row index for the page break</span></span>
+      指定分页符的行索引
 
-      <span data-ttu-id="62e3e-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="62e3e-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
     fullName: rowIndex
     langs:
