--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotitemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotitemupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData:interface'
-    summary: '<span data-ttu-id="94bd8-101">一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="94bd8-101">An interface for updating data on the PivotItem object, for use in `pivotItem.set({ ... })`</span></span><!-- --><span data-ttu-id="94bd8-102">.</span><span class="sxs-lookup"><span data-stu-id="94bd8-102"></span></span>'
+    summary: '一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.PivotItemUpdateData
     fullName: Excel.Interfaces.PivotItemUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
     summary: |-
-      <span data-ttu-id="94bd8-103">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="94bd8-103">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
+      确定是展开项以显示子项还是折叠项并隐藏子项。
 
-      <span data-ttu-id="94bd8-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94bd8-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isExpanded
     fullName: isExpanded
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="94bd8-105">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="94bd8-105">Name of the PivotItem.</span></span>
+      PivotItem 的名称。
 
-      <span data-ttu-id="94bd8-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94bd8-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="94bd8-107">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="94bd8-107">Determines whether the PivotItem is visible or not.</span></span>
+      指定 PivotItem 是否可见。
 
-      <span data-ttu-id="94bd8-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94bd8-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
