--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangefillupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
-    summary: '<span data-ttu-id="17fad-101">一个用于更新 RangeFill 对象上的数据的接口，可用于`rangeFill.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="17fad-101">An interface for updating data on the RangeFill object, for use in `rangeFill.set({ ... })`</span></span><!-- --><span data-ttu-id="17fad-102">.</span><span class="sxs-lookup"><span data-stu-id="17fad-102"></span></span>'
+    summary: '一个用于更新 RangeFill 对象上的数据的接口，可用于`rangeFill.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeFillUpdateData
     fullName: Excel.Interfaces.RangeFillUpdateData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFillUpdateData#tintAndShade:member'
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="17fad-103">代表表单\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="17fad-103">HTML color code representing the color of the background, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange")</span></span>
+      代表表单\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的背景色的 HTML 颜色代码。
 
-      <span data-ttu-id="17fad-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17fad-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -31,9 +31,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#pattern:member'
     summary: |-
-      <span data-ttu-id="17fad-105">获取或设置区域的图案。</span><span class="sxs-lookup"><span data-stu-id="17fad-105">Gets or sets the pattern of a Range.</span></span> <span data-ttu-id="17fad-106">有关详细信息，请参阅 Excel.FillPattern。</span><span class="sxs-lookup"><span data-stu-id="17fad-106">See Excel.FillPattern for details.</span></span> <span data-ttu-id="17fad-107">不支持 LinearGradient 和 RectangularGradient。</span><span class="sxs-lookup"><span data-stu-id="17fad-107">LinearGradient and RectangularGradient are not supported.</span></span> <span data-ttu-id="17fad-108">如果为 null 值，则表示整个区域没有统一的模式设置。</span><span class="sxs-lookup"><span data-stu-id="17fad-108">A null value indicates that the entire range doesn't have uniform pattern setting.</span></span>
+      区域的图案。 有关详细信息，请参阅 Excel.FillPattern。 不支持 LinearGradient 和 RectangularGradient。 如果为 null 值，则表示整个区域没有统一的模式设置。
 
-      <span data-ttu-id="17fad-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17fad-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
     fullName: pattern
     langs:
@@ -46,9 +46,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillUpdateData#pattern~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#patternColor:member'
     summary: |-
-      <span data-ttu-id="17fad-110">设置表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="17fad-110">Sets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="17fad-111">获取表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如 "FFA500"）。</span><span class="sxs-lookup"><span data-stu-id="17fad-111">Gets HTML color code representing the color of the Range pattern, of the form \#RRGGBB (e.g. "FFA500").</span></span>
+      表示范围模式的颜色的 HTML 颜色代码，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
 
-      <span data-ttu-id="17fad-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17fad-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
     fullName: patternColor
     langs:
@@ -61,9 +61,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#patternTintAndShade:member'
     summary: |-
-      <span data-ttu-id="17fad-113">返回或设置一个使区域填充的图案颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="17fad-113">Returns or sets a double that lightens or darkens a pattern color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="17fad-114">如果模式 tintAndShades 不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="17fad-114">If the pattern tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的图案颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果模式 tintAndShades 不一致，则将返回 null。
 
-      <span data-ttu-id="17fad-115">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17fad-115">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -76,9 +76,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFillUpdateData#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="17fad-116">返回或设置一个使区域填充的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="17fad-116">Returns or sets a double that lightens or darkens a color for Range Fill, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="17fad-117">如果 tintAndShades 不是统一的，将返回 null。</span><span class="sxs-lookup"><span data-stu-id="17fad-117">If the tintAndShades are not uniform, null will be returned.</span></span>
+      指定用于将区域填充的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 如果 tintAndShades 不是统一的，将返回 null。
 
-      <span data-ttu-id="17fad-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="17fad-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
