--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalrangefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.conditionalrangefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData:interface'
-    summary: <span data-ttu-id="94017-101">描述通过调用返回的数据的接口`conditionalRangeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="94017-101">An interface describing the data returned by calling `conditionalRangeFont.toJSON()`</span></span><!-- --><span data-ttu-id="94017-102">.</span><span class="sxs-lookup"><span data-stu-id="94017-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`conditionalRangeFont.toJSON()`<!-- -->.
     name: Excel.Interfaces.ConditionalRangeFontData
     fullName: Excel.Interfaces.ConditionalRangeFontData
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeFontData#underline:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData#bold:member'
     summary: |-
-      <span data-ttu-id="94017-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="94017-103">Represents the bold status of font.</span></span>
+      指定字体是否为粗体。
 
-      <span data-ttu-id="94017-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94017-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData#color:member'
     summary: |-
-      <span data-ttu-id="94017-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="94017-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="94017-106">例如，</span><span class="sxs-lookup"><span data-stu-id="94017-106">E.g.</span></span> <span data-ttu-id="94017-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="94017-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="94017-108">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94017-108">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -46,9 +46,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData#italic:member'
     summary: |-
-      <span data-ttu-id="94017-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="94017-109">Represents the italic status of the font.</span></span>
+      指定字体是否为斜体。
 
-      <span data-ttu-id="94017-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94017-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -61,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData#strikethrough:member'
     summary: |-
-      <span data-ttu-id="94017-111">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="94017-111">Represents the strikethrough status of the font.</span></span>
+      指定字体的删除线状态。
 
-      <span data-ttu-id="94017-112">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94017-112">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeFontData#underline:member'
     summary: |-
-      <span data-ttu-id="94017-113">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="94017-113">Type of underline applied to the font.</span></span> <span data-ttu-id="94017-114">有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="94017-114">See Excel.ConditionalRangeFontUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 ConditionalRangeFontUnderlineStyle。
 
-      <span data-ttu-id="94017-115">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="94017-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
