--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlinelabelformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.charttrendlinelabelformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="57d34-101">封装图表趋势线标签的格式属性。</span><span class="sxs-lookup"><span data-stu-id="57d34-101">Encapsulates the format properties for the chart trendline label.</span></span>
+      封装图表趋势线标签的格式属性。
 
-      <span data-ttu-id="57d34-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57d34-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#border:member'
       - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="57d34-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="57d34-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="57d34-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="57d34-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="57d34-105">).</span><span class="sxs-lookup"><span data-stu-id="57d34-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="57d34-106">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="57d34-106">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      指定边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="57d34-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57d34-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="57d34-108">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="57d34-108">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
+      指定图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="57d34-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="57d34-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
